bk_ida/gccida/g1/do_jump_by_parts_equality
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality/src/expr.c:10277:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality/src/expr.c:10302:17: error: invalid suffix 'xmode' on integer constant
v6 = *(short *)0xmode; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality/src/expr.c:10304:30: error: invalid suffix 'orce' on integer constant
v9 = operand_sub*(short *)0xforce( op1, i, ( machine_mode)v4); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality/src/expr.c:10304:46: error: use of undeclared identifier 'machine_mode'
v9 = operand_sub*(short *)0xforce( op1, i, ( machine_mode)v4); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality/src/expr.c:10304:6: error: use of undeclared identifier 'operand_sub'
v9 = operand_sub*(short *)0xforce( op1, i, ( machine_mode)v4); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality/src/expr.c:10305:30: error: invalid suffix 'orce' on integer constant
v8 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)v4); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality/src/expr.c:10305:46: error: use of undeclared identifier 'machine_mode'
v8 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)v4); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality/src/expr.c:10305:6: error: use of undeclared identifier 'operand_sub'
v8 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)v4); 
     ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality/src/obj/expr.o] Error 1
